Squashed commit of the following:
commit 97c0b03472e8d578e4ac7f69861c4e1f5c51c078
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Mon Aug 18 07:55:56 2025 +0700

    .

commit 042c5f6399167a2fd9b85f5638c1a57597691afe
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Mon Aug 18 01:08:14 2025 +0700

    Update TestWriterAgent.java

commit 4fe53b657c96f1ac7a7c4376dcebe5763be56396
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Mon Aug 18 00:57:22 2025 +0700

    .

commit d02c1e27dd810a704505b4804ed7c8108b0697c0
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Mon Aug 18 00:23:57 2025 +0700

    ,

commit 8e58790f6ca9a72c47fbc7a80af7dce85d362abc
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Sat Aug 16 08:33:47 2025 +0700

    .

commit db9dd76c4e6bbb5a43c7c4e03fcdb4d0077bdfd8
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Sat Aug 16 00:56:39 2025 +0700

    .

commit 6dce6825acf9df3ae462eae12453dcf6138c43cf
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 19:06:43 2025 +0700

    .

commit 234e2a0aed96841c073ace239d1ab31cc094896b
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 17:27:20 2025 +0700

    ..

commit a24d4a2d27e3482151b94cf32469237bf2f94ec5
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 16:13:44 2025 +0700

    .

commit 0de6d4b0352ead152316fc0ed78f41bb70703dac
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 15:37:20 2025 +0700

    .

commit 086c7b1fed579021fc8202cd323ad49e973b3ece
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 14:59:29 2025 +0700

    update agent prompt

commit 9e506f068952105724a9e8b4355e0d0d5562089d
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 14:26:47 2025 +0700

    .

commit dfe2f14be20bf19d6bb42045c3055b9892495890
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 14:17:28 2025 +0700

    update the agents

commit a9ce500c9785e13011c38939e3d8bc9ec5a4b9e0
Author: nhutnm3 <nmnhut.en@gmail.com>
Date:   Fri Aug 15 13:27:23 2025 +0700

    fix test plan

commit 7e7662b9b384c1460bc2576d